--- a/course-info.yaml
+++ b/course-info.yaml
@@ -9,5 +9,5 @@ summary: |-
   - The course is based on the author's personal experience in Java development.
 programming_language: Java
 content:
-- lesson1
+- section
 - util
