--- a/Tutorial/Setup/Einführung/task-info.yaml
+++ b/Tutorial/Setup/Einführung/task-info.yaml
@@ -1,6 +1,6 @@
 type: theory
 files:
-- name: src/templatepuiapp/AppStarter.java
-  visible: true
 - name: RPI-Plugin.png
   visible: false
+- name: src/AppStarter.java
+  visible: true
