--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ subprojects {
         implementation 'com.pi4j:pi4j-plugin-pigpio:2.2.0'
         implementation 'com.pi4j:pi4j-plugin-mock:2.2.0'
         implementation 'com.pi4j:pi4j-plugin-linuxfs:2.2.0'
+        implementation 'org.junit.jupiter:junit-jupiter-engine:5.7.1'
+        implementation 'org.junit.jupiter:junit-jupiter-params:5.7.1'
 
         //javafx Dependencies
         //implementation 'org.openjfx:javafx-base:17.0.1'
@@ -57,18 +59,5 @@ subprojects {
         def runOutput = new ByteArrayOutputStream()
         tasks.run.setStandardOutput(runOutput)
         tasks.run.doLast { printOutput(runOutput) }
-    }
-}
-
-project(':util') {
-    dependencies {
-        implementation group: 'junit', name: 'junit', version: '4.12'
-    }
-}
-
-configure(subprojects.findAll { it.name != 'util' }) {
-    dependencies {
-        implementation project(':util').sourceSets.main.output
-        testImplementation project(':util').sourceSets.test.output
     }
 }
