--- a/Tutorial/Setup/Grundverständnis/task-info.yaml
+++ b/Tutorial/Setup/Grundverständnis/task-info.yaml
@@ -1,9 +1,15 @@
 type: choice
-is_multiple_choice: false
+is_multiple_choice: true
 options:
-- text: Correct
+- text: Es gibt einen Komponenten-Katalog.
   is_correct: true
-- text: Incorrect
+- text: Der geschrieben Code kann nur auf dem lokalen Client ausgeführt werden.
+  is_correct: false
+- text: Das Crowpi-Image ist nur ein Template, keine Vorgabe.
+  is_correct: false
+- text: Nach dieser Lektion weiss ich wie ein neues Projekt erstellt wird.
+  is_correct: true
+- text: Der Katalog beinhaltet nur Code.
   is_correct: false
 files:
 - name: src/AppStarter.java
