--- a/Tutorial/Neues Projekt/Implementation Button/task-info.yaml
+++ b/Tutorial/Neues Projekt/Implementation Button/task-info.yaml
@@ -1,7 +1,5 @@
 type: edu
 files:
-- name: test/Tests.java
-  visible: false
 - name: src/com/pi4j/mvc/templatepuiapp/view/SomePUI.java
   visible: true
   placeholders:
@@ -42,3 +40,7 @@ files:
   visible: true
 - name: Button-Class.png
   visible: true
+- name: test/com/pi4j/mvc/templatepuiapp/view/SomePUITest.java
+  visible: true
+- name: test/test.java
+  visible: false
