--- a/Tutorial/Neues Projekt/Implementation LED/task-info.yaml
+++ b/Tutorial/Neues Projekt/Implementation LED/task-info.yaml
@@ -1,5 +1,21 @@
 type: edu
 files:
+- name: LED-Class.png
+  visible: true
+- name: src/com/pi4j/catalog/components/Component.java
+  visible: true
+- name: src/com/pi4j/catalog/components/SimpleButton.java
+  visible: true
+- name: src/com/pi4j/catalog/components/SimpleLED.java
+  visible: true
+- name: src/com/pi4j/mvc/templatepuiapp/AppStarter.java
+  visible: true
+- name: src/com/pi4j/catalog/components/helpers/PIN.java
+  visible: true
+- name: src/com/pi4j/mvc/templatepuiapp/controller/SomeController.java
+  visible: true
+- name: src/com/pi4j/mvc/templatepuiapp/model/SomeModel.java
+  visible: true
 - name: src/com/pi4j/mvc/templatepuiapp/view/SomePUI.java
   visible: true
   placeholders:
@@ -8,32 +24,20 @@ files:
     placeholder_text: /* create object led from SimpleLED */
   - offset: 968
     length: 37
-    placeholder_text: /* init led with PIN.PWM19 */
+    placeholder_text: /*init led with PIN.PWM19*/
   - offset: 1266
     length: 33
-    placeholder_text: /* call ledOn from controller if button is pressed */
+    placeholder_text: /* call ledOn form controller if button is pressed */
   - offset: 1309
     length: 32
-    placeholder_text: /* call ledOff from controller if button is released */
+    placeholder_text: /* call ledOff form controller if button is released */
   - offset: 1939
     length: 9
-    placeholder_text: /* switch on led if ledGlwos is TRUE, us a methode from simpleLED
-      */
+    placeholder_text: /*switch on led with methode from simpleLED*/
   - offset: 2002
     length: 10
-    placeholder_text: /* switch off led if ledGlwos is FALSE, us a methode from simpleLED
-      */
-- name: src/com/pi4j/catalog/components/Component.java
-  visible: true
-- name: src/com/pi4j/catalog/components/helpers/PIN.java
-  visible: true
-- name: src/com/pi4j/catalog/components/SimpleButton.java
-  visible: true
-- name: src/com/pi4j/mvc/templatepuiapp/AppStarter.java
-  visible: true
-- name: src/com/pi4j/mvc/templatepuiapp/controller/SomeController.java
-  visible: true
-- name: src/com/pi4j/mvc/templatepuiapp/model/SomeModel.java
+    placeholder_text: /*switch off led with methode from simpleLED*/
+- name: src/com/pi4j/mvc/util/Pi4JContext.java
   visible: true
 - name: src/com/pi4j/mvc/util/mvcbase/ConcurrentTaskQueue.java
   visible: true
@@ -45,9 +49,5 @@ files:
   visible: true
 - name: src/com/pi4j/mvc/util/mvcbase/PuiBase.java
   visible: true
-- name: src/com/pi4j/mvc/util/Pi4JContext.java
-  visible: true
-- name: test/Tests.java
-  visible: false
-- name: src/com/pi4j/catalog/components/SimpleLED.java
+- name: test/com/pi4j/mvc/templatepuiapp/view/SomePUITest.java
   visible: true
