implement run config

--- a/Tutorial/Neues Projekt/Implementation Button/task-info.yaml
+++ b/Tutorial/Neues Projekt/Implementation Button/task-info.yaml
@@ -42,3 +42,5 @@ files:
   visible: true
 - name: test/com/pi4j/mvc/templatepuiapp/view/SomePUITest.java
   visible: true
+- name: src/NeuesProjekt-ImplementationButton.run.xml
+  visible: false
