--- a/Tutorial/Neues Projekt/Implementation LED/task-info.yaml
+++ b/Tutorial/Neues Projekt/Implementation LED/task-info.yaml
@@ -51,3 +51,5 @@ files:
   visible: true
 - name: test/com/pi4j/mvc/templatepuiapp/view/SomePUITest.java
   visible: true
+- name: src/NeuesProjekt-ImplementationLED.run.xml
+  visible: false
