--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,9 @@
 .idea/compiler.xml
 .idea/jarRepositories.xml
 .idea/modules.xml
-#.idea/*.iml
-#.idea/modules
-#*.iml
+.idea/*.iml
+.idea/modules
+*.iml
 *.ipr
 
 # CMake
