--- a/Tutorial/Erste Komponente/lesson-info.yaml
+++ b/Tutorial/Erste Komponente/lesson-info.yaml
@@ -5,5 +5,6 @@ content:
 - Beispielcode
 - Widerstand
 - Methode isUp
+- Implementation LED
 - Einführung Eventhandler
-- Implementation onDown onUp
+- Implementation Button
