--- a/Tutorial/Erste Komponente/Beispielcode/task-info.yaml
+++ b/Tutorial/Erste Komponente/Beispielcode/task-info.yaml
@@ -1,5 +1,5 @@
 type: choice
-is_multiple_choice: true
+is_multiple_choice: false
 options:
 - text: Die Applikation wird beendet.
   is_correct: false
