--- a/Tutorial/Erste Komponente/Implementation LED/task-info.yaml
+++ b/Tutorial/Erste Komponente/Implementation LED/task-info.yaml
@@ -11,11 +11,11 @@ files:
     length: 9
     placeholder_text: /* turn on LED */
   - offset: 1912
-    length: 124
-    placeholder_text: /* Create a flashing light*/
+    length: 116
+    placeholder_text: /* Create flashing light */
   - offset: 2091
-    length: 18
-    placeholder_text: /* Turn LED off */
+    length: 10
+    placeholder_text: /* Turn off led */
 - name: test/Tests.java
   visible: false
 - name: src/Component.java
@@ -25,4 +25,4 @@ files:
 - name: src/SimpleLED.java
   visible: true
 - name: src/ErsteKomponente-ImplementationLED.run.xml
-  visible: false
+  visible: true
