--- a/Tutorial/Erste Komponente/Abschluss/task-info.yaml
+++ b/Tutorial/Erste Komponente/Abschluss/task-info.yaml
@@ -1,14 +1,11 @@
 type: choice
 is_multiple_choice: true
 options:
-- text: "Ich kenne den groben Inhalt des Hardwarekataloges und weiss, wie ich diesen\
-    \ in meinem Projekt einsetzen kann."
+- text: Ich kenne den groben Inhalt des Hardwarekataloges und weiss, wie ich diesen in meinem Projekt einsetzen kann.
   is_correct: true
-- text: "Ich weiss, wo ich im Hardwarekatalog Hilfe zur elektrischen Montage der Bauteile\
-    \ bekomme."
+- text: Ich weiss, wo ich im Hardwarekatalog Hilfe zur elektrischen Montage der Bauteile bekomme.
   is_correct: true
-- text: Ich kenne die Funktionen von SimpleLED und SimpelButton und kann diese in
-    einer einfache Applikation verwenden.
+- text: Ich kenne die Funktionen von SimpleLED und SimpelButton und kann diese in einer einfache Applikation verwenden.
   is_correct: true
 - text: Ich kann eine einfache Applikation auf dem Raspberry Pi starten.
   is_correct: true
@@ -25,4 +22,3 @@ files:
   visible: true
 - name: src/SimpleLED.java
   visible: true
-local_check: true
