lesson3 task4 and 5 finished with tests

--- a/Tutorial/Komponente Erstellen/lesson-info.yaml
+++ b/Tutorial/Komponente Erstellen/lesson-info.yaml
@@ -3,3 +3,5 @@ content:
 - Einführung
 - Grundverständnis
 - Implementation Klassenmodifizierung
+- Wiederverwendbarkeit
+- Implementation Klassenwiederverwendung
