lesson3 fully finished

--- a/Tutorial/Komponente Erstellen/lesson-info.yaml
+++ b/Tutorial/Komponente Erstellen/lesson-info.yaml
@@ -5,3 +5,5 @@ content:
 - Implementation Klassenmodifizierung
 - Wiederverwendbarkeit
 - Implementation Klassenwiederverwendung
+- Zusammenfassung
+- Abschluss
