fix bugs in picture

--- a/Tutorial/Einführung/Benutzeroberfläche/task-info.yaml
+++ b/Tutorial/Einführung/Benutzeroberfläche/task-info.yaml
@@ -2,5 +2,5 @@ type: theory
 files:
 - name: src/Main.java
   visible: true
-- name: Benutzeroberfläche.png
+- name: Benutzeroberflaeche.png
   visible: false
