--- a/Tutorial/Komponente Erstellen/Validierung/task-info.yaml
+++ b/Tutorial/Komponente Erstellen/Validierung/task-info.yaml
@@ -7,7 +7,7 @@ options:
   is_correct: true
 - text: Ich kann bestehende Klassen modifizieren
   is_correct: true
-- text: Ich kann bestehende Klassen wiederverwenden in einer Neuen
+- text: Ich kann bestehende Klassen in eine neuen Klasse wiederverwenden
   is_correct: true
 files:
 - name: src/Main.java
