--- a/Tutorial/Setup/Ausführung/task-info.yaml
+++ b/Tutorial/Setup/Ausführung/task-info.yaml
@@ -1,35 +1,7 @@
 type: edu
 files:
-- name: src/com/pi4j/mvc/templatepuiapp/AppStarter.java
-  visible: true
-- name: src/com/pi4j/mvc/util/mvcbase/PuiBase.java
-  visible: true
-- name: src/com/pi4j/mvc/util/mvcbase/Projector.java
-  visible: true
-- name: src/com/pi4j/mvc/util/mvcbase/ControllerBase.java
-  visible: true
-- name: src/com/pi4j/mvc/util/mvcbase/ObservableValue.java
-  visible: true
-- name: src/com/pi4j/mvc/util/mvcbase/ConcurrentTaskQueue.java
-  visible: true
-- name: src/com/pi4j/mvc/util/Pi4JContext.java
-  visible: true
-- name: src/com/pi4j/mvc/templatepuiapp/view/SomePUI.java
-  visible: true
-- name: src/com/pi4j/mvc/templatepuiapp/model/SomeModel.java
-  visible: true
-- name: src/com/pi4j/mvc/templatepuiapp/controller/SomeController.java
-  visible: true
 - name: src/Setup-Ausführung.run.xml
   visible: false
-- name: src/com/pi4j/catalog/components/helpers/PIN.java
-  visible: true
-- name: src/com/pi4j/catalog/components/Component.java
-  visible: true
-- name: src/com/pi4j/catalog/components/SimpleLED.java
-  visible: true
-- name: src/com/pi4j/catalog/components/SimpleButton.java
-  visible: true
 - name: Breadboard.png
   visible: false
 - name: Layout.png
@@ -38,3 +10,5 @@ files:
   visible: false
 - name: test/Tests.java
   visible: false
+- name: src/Main.java
+  visible: true
