--- a/Tutorial/Erste Komponente/lesson-info.yaml
+++ b/Tutorial/Erste Komponente/lesson-info.yaml
@@ -7,6 +7,7 @@ content:
 - Methode isUp
 - Implementation LED
 - Einführung Eventhandler
+- Einführung Raspberry Pi
 - Implementation Button
 - Zusammenfassung
 - Abschluss
