--- a/Tutorial/Klassenmodifizierung/lesson-info.yaml
+++ b/Tutorial/Klassenmodifizierung/lesson-info.yaml
@@ -1,7 +1,7 @@
 content:
 - Übersicht
 - Selbsteinschätzung
-- Einleitung
+- Klassenmodifizierung
 - Implementation Klassenmodifizierung
 - Wiederverwendbarkeit
 - Implementation Klassenwiederverwendung
