--- a/Tutorial/Klassenmodifizierung/Implementation Klassenwiederverwendung/task-info.yaml
+++ b/Tutorial/Klassenmodifizierung/Implementation Klassenwiederverwendung/task-info.yaml
@@ -15,17 +15,16 @@ files:
   placeholders:
   - offset: 329
     length: 71
-    placeholder_text: /* TODO Referenziere die Ursprungsklassen als Attribute */
+    placeholder_text: /* TODO Deklariere zwei Objekte led und button mit SimpleLed und SimpleButton */
   - offset: 687
     length: 127
-    placeholder_text: /* TODO Initialisiere die referenzierten Klassen */
+    placeholder_text: /* TODO Initialisiere die beiden Objekte */
   - offset: 826
     length: 363
-    placeholder_text: /* TODO Überschreibe die Methoden der referenzierten LED */
+    placeholder_text: /* TODO Schreibe die Methoden zum Led Teil von LedButton, benutze dazu die Methoden vom Objekt led */
   - offset: 1195
     length: 814
-    placeholder_text: /* TODO Überschreibe die Methoden des referenzierten Buttons
-      */
+    placeholder_text: /* TODO Schreibe die Methoden zum Button Teil von LedButton, benutze dazu die Methoden vom Objekt button */
 - name: src/KomponenteErstellen-ImplementationWiederverwendung.run.xml
   visible: false
 - name: test/LEDButtonTest.java
