rework after review, start deploy to pi from check button

--- a/Tutorial/Setup/Ausführung/task-info.yaml
+++ b/Tutorial/Setup/Ausführung/task-info.yaml
@@ -1,6 +1,6 @@
 type: edu
 files:
-- name: src/Setup-Ausführung.run.xml
+- name: runConfigurations/Setup-Ausführung.run.xml
   visible: false
 - name: Breadboard.png
   visible: false
