Anpassungen nach Review

--- a/Tutorial/Klassenmodifizierung/Selbsteinschätzung/task-info.yaml
+++ b/Tutorial/Klassenmodifizierung/Selbsteinschätzung/task-info.yaml
@@ -9,7 +9,7 @@ options:
   is_correct: true
 - text: this zeigt immer auf das Objekt, in dem sich die Methode befindet, die gerade ausgeführt wird.
   is_correct: true
-- text: encapsulation speichert die Eigenschaften / den Zustand des Objektes.
+- text: Encapsulation speichert die Eigenschaften / den Zustand des Objektes.
   is_correct: false
 files:
 - name: src/Main.java
