--- a/Tutorial/Einführung-PI4J/Standardcontext/task-info.yaml
+++ b/Tutorial/Einführung-PI4J/Standardcontext/task-info.yaml
@@ -12,7 +12,7 @@ files:
   visible: false
 - name: src/Component.java
   visible: false
-- name: src/SimpleLED.java
-  visible: true
 - name: src/Einführung-PI4J-Standardcontext.run.xml
   visible: false
+- name: src/SimpleLed.java
+  visible: true
