update lesson erste Komponente

--- a/Tutorial/Erste Komponente/Implementation LED/task-info.yaml
+++ b/Tutorial/Erste Komponente/Implementation LED/task-info.yaml
@@ -22,7 +22,7 @@ files:
   visible: false
 - name: src/PIN.java
   visible: false
-- name: src/SimpleLED.java
+- name: src/SimpleLed.java
   visible: true
 - name: src/ErsteKomponente-ImplementationLED.run.xml
   visible: false
