--- a/Tutorial/Erste Komponente/Selbsteinschätzung/task-info.yaml
+++ b/Tutorial/Erste Komponente/Selbsteinschätzung/task-info.yaml
@@ -3,11 +3,11 @@ is_multiple_choice: true
 options:
 - text: Der Hardwarekatalog besteht nur aus Klassen, welche für die eigenen Software-Applikationen genutzt werden können.
   is_correct: false
-- text: Der Hardwarekatalog besitzt auch Verdrahtungs-Schemas.
+- text: Der Hardwarekatalog besitzt auch Verdrahtungsschemas.
   is_correct: true
-- text: Event Handler setzen voraus, dass bei der Komponente noch Anpassungen vorgenommen werden müssen.
+- text: Um eine LED aus dem Starterkit anzusteuern braucht es keinen Widerstand.
   is_correct: false
-- text: Braucht es einen Widerstand für die LED aus dem Startkit.
+- text: Um eine projektspezifische Funktion aufzurufen, wenn der Button gedrückt wird, muss die Klasse Button angepasst werden.
   is_correct: false
 files:
 - name: src/Main.java
