--- a/Tutorial/Setup/Ausführung/task-info.yaml
+++ b/Tutorial/Setup/Ausführung/task-info.yaml
@@ -1,12 +1,14 @@
 type: edu
 files:
-- name: Setup-Ausführung.run.xml
-  visible: true
 - name: Breadboard.png
   visible: false
 - name: Layout.png
   visible: false
 - name: test/Tests.java
+  visible: false
+- name: SetupAusfuehrungRunConfig.png
+  visible: false
+- name: Setup-Ausführung.run.xml
   visible: false
 - name: src/Main.java
   visible: true
