Feedback from review

--- a/Tutorial/Erste Komponente/lesson-info.yaml
+++ b/Tutorial/Erste Komponente/lesson-info.yaml
@@ -1,8 +1,9 @@
 content:
-- Beispielcode
-- Widerstand
-- Methode isUp
-- Einführung Eventhandler
+- Übersicht
+- Selbsteinschätzung
+- Hardwarekatalog
+- Pins Raspberry Pi
+- Eventhandler
 - Implementation Button
 - Implementation LED
 - Zusammenfassung
