--- a/Tutorial/ModelViewController/Model/task-info.yaml
+++ b/Tutorial/ModelViewController/Model/task-info.yaml
@@ -17,25 +17,23 @@ files:
   placeholders:
   - offset: 445
     length: 30
-    placeholder_text: /* TODO Deklariere den LedButton */
+    placeholder_text: /* TODO declare the LedButton */
   - offset: 671
     length: 59
-    placeholder_text: /* TODO Initialisiere den LedButton */
+    placeholder_text: /* TODO initialize the LedButton */
   - offset: 846
     length: 29
-    placeholder_text: /* TODO Implementiere den Shutdown */
+    placeholder_text: /* TODO implement the Shutdown */
   - offset: 1056
     length: 92
-    placeholder_text: /* TODO Verbinde die Komponenteninteraktionen mit dem Kontroller
+    placeholder_text: /* TODO connect the interactions from the button with the function of the controller
       */
   - offset: 1322
     length: 88
-    placeholder_text: /* TODO Gib den String der Message des Models aus, sobald sich
-      dieser ändert*/
+    placeholder_text: /* TODO give out the message stored in the model to the console, when the message changes */
   - offset: 1420
     length: 94
-    placeholder_text: /* TODO Setze den Zustand der LED um, sobald sich das Model
-      ändert */
+    placeholder_text: /* TODO create a listener on the "ledGlows" of the model, and toggle the led */
 - name: src/view/components/helpers/PIN.java
   visible: false
 - name: src/view/components/Component.java
@@ -51,14 +49,13 @@ files:
   placeholders:
   - offset: 241
     length: 105
-    placeholder_text: /* TODO Erstelle ein Observable vom Typ String mit dem Namen
-      "message" */
+    placeholder_text: /* TODO create an Observable of type String with the name "message" */
 - name: src/controller/Controller.java
   visible: true
   placeholders:
   - offset: 414
     length: 83
-    placeholder_text: /* TODO aktualisiere das Model mit der neuen Message */
+    placeholder_text: /* TODO refresh the model with the new message */
 - name: src/ModelViewController-Model.run.xml
   visible: false
 - name: test/view/ViewTest.java
