--- a/Tutorial/ModelViewController/View/task-info.yaml
+++ b/Tutorial/ModelViewController/View/task-info.yaml
@@ -27,21 +27,21 @@ files:
   placeholders:
   - offset: 377
     length: 30
-    placeholder_text: /* TODO Deklariere den SimpleButton */
+    placeholder_text: /* TODO declare the SimpleButton */
   - offset: 603
     length: 48
-    placeholder_text: /* TODO Initialisiere den SimpleButton */
+    placeholder_text: /* TODO initialize the SimpleButton */
   - offset: 767
     length: 23
-    placeholder_text: /* TODO Implementiere den Shutdown */
-  - offset: 1422
+    placeholder_text: /* TODO deregister the SimpleButton functions */
+  - offset: 1301
     length: 39
-    placeholder_text: /* TODO Verbinde die Komponenteninteraktionen mit dem Kontroller
-      */
-  - offset: 1635
-    length: 252
-    placeholder_text: /* TODO Gib den String "You pressed the button x times." auf
-      der Konsole aus bei Model-Änderungen. */
+    placeholder_text: /* TODO connect the interaction from the button with the function
+      of the controller */
+  - offset: 1659
+    length: 65
+    placeholder_text: /* TODO write to the console "You pressed the button x times."
+      where x represents the new Value of the counter */
 - name: test/view/ViewTest.java
   visible: false
 - name: src/ModelViewController-View.run.xml
