until task 4 finished, 5 started

--- a/Tutorial/Eigenes Projekt/Komponenten/task-info.yaml
+++ b/Tutorial/Eigenes Projekt/Komponenten/task-info.yaml
@@ -34,3 +34,7 @@ files:
   visible: false
 - name: test/com/pi4j/catalog/components/LedButtonTest.java
   visible: false
+- name: src/EigenesProjekt-Komponenten.run.xml
+  visible: true
+- name: src/module-info.java
+  visible: false
