--- a/Tutorial/Eigenes Projekt/Kontroller/task-info.yaml
+++ b/Tutorial/Eigenes Projekt/Kontroller/task-info.yaml
@@ -1,5 +1,7 @@
 type: edu
 files:
+- name: test/Tests.java
+  visible: false
 - name: src/com/pi4j/mvc/util/mvcbase/PuiBase.java
   visible: false
 - name: src/com/pi4j/mvc/util/mvcbase/Projector.java
@@ -17,11 +19,23 @@ files:
 - name: src/com/pi4j/mvc/templatepuiapp/model/Model.java
   visible: true
   placeholders:
-  - offset: 818
+  - offset: 172
     length: 646
-    placeholder_text: /* TODO define the variables you want to use. The Solution includes
-      the variables for one possible solution */
+    placeholder_text: /* TODO the previously generated Model will show up here. If
+      the previous Task was not worked on, then nothing will show up here  */
+    dependency:
+      section: Tutorial
+      lesson: Eigenes Projekt
+      task: Model
+      file: src/com/pi4j/mvc/templatepuiapp/model/Model.java
+      placeholder: 1
+      is_visible: false
 - name: src/com/pi4j/mvc/templatepuiapp/controller/Controller.java
   visible: true
+  placeholders:
+  - offset: 1203
+    length: 3052
+    placeholder_text: /* TODO create the functions of the controller, which will update
+      the model */
 - name: src/com/pi4j/mvc/templatepuiapp/AppStarter.java
   visible: true
