--- a/course-info.yaml
+++ b/course-info.yaml
@@ -8,6 +8,8 @@ summary: |-
   - Der Kurs deckt ab, wie PI4J verwendet werden kann, wie ein Projekt-Aufbau aussieht, wie die Komponenten angesteuert werden können und was das MVC-Pattern ist.
   - Der Kurs beinhaltet Hands-On Beispiele von Java Code Implementationen und Übungen, um neue Skills zu verbessern.
   - Der Kurs basiert auf dem PI4J-Komponenten-Katalog und den Erfahrungen von ehemaligen IP12-Projekten.
+vendor:
+  name: Admin
 programming_language: Java
 content:
 - Tutorial
