how to chang configuration file

--- a/Tutorial/Einführung/RunConfiguration/task-info.yaml
+++ b/Tutorial/Einführung/RunConfiguration/task-info.yaml
@@ -4,3 +4,7 @@ files:
   visible: true
 - name: RunConfiguration.png
   visible: false
+- name: EditRunConfiguration.png
+  visible: false
+- name: EnterEditRunConfiguration.png
+  visible: false
