--- a/Tutorial/Eigenes Projekt/Kontroller/task-info.yaml
+++ b/Tutorial/Eigenes Projekt/Kontroller/task-info.yaml
@@ -3,16 +3,16 @@ files:
 - name: src/com/pi4j/mvc/templatepuiapp/controller/Controller.java
   visible: true
   placeholders:
-    - offset: 1203
-      length: 3052
-      placeholder_text: |-
-        /* TODO create the functions of the controller, which will update
-              the model */
+  - offset: 1203
+    length: 3052
+    placeholder_text: |-
+      /* TODO create the functions of the controller, which will update
+            the model */
 - name: src/com/pi4j/mvc/templatepuiapp/model/Model.java
   visible: true
   placeholders:
   - offset: 172
-    length: 646
+    length: 4
     placeholder_text: /* TODO the model is edited in the task Model */
     dependency:
       section: Tutorial
@@ -21,8 +21,6 @@ files:
       file: src/com/pi4j/mvc/templatepuiapp/model/Model.java
       placeholder: 1
       is_visible: false
-- name: test/Tests.java
-  visible: false
 - name: src/com/pi4j/mvc/util/mvcbase/PuiBase.java
   visible: false
 - name: src/com/pi4j/mvc/util/mvcbase/Projector.java
@@ -39,3 +37,9 @@ files:
   visible: true
 - name: src/com/pi4j/mvc/templatepuiapp/AppStarter.java
   visible: true
+- name: test/com/pi4j/mvc/templatepuiapp/view/pui/PUITest.java
+  visible: false
+- name: test/com/pi4j/mvc/templatepuiapp/model/ModelTest.java
+  visible: false
+- name: test/com/pi4j/mvc/templatepuiapp/controller/ControllerTest.java
+  visible: false
