--- a/Tutorial/Einführung/EducationalTask/task-info.yaml
+++ b/Tutorial/Einführung/EducationalTask/task-info.yaml
@@ -3,9 +3,9 @@ files:
 - name: src/Main.java
   visible: true
   placeholders:
-  - offset: 130
+  - offset: 213
     length: 25
-    placeholder_text: "/*Print \"Hello world, hello LEITFADEN\" to console */"
+    placeholder_text: "/*TODO: Print \"Hello world, hello LEITFADEN\" to console */"
 - name: PeakSolution.png
   visible: false
 - name: test/output.txt
