--- a/Tutorial/Erste Komponente/Validierung/task-info.yaml
+++ b/Tutorial/Erste Komponente/Validierung/task-info.yaml
@@ -1,24 +1,28 @@
 type: choice
 is_multiple_choice: true
 options:
-- text: Ich kenne den groben Inhalt des Hardwarekataloges und weiss, wie ich diesen in meinem Projekt einsetzen kann.
+- text: "Ich kenne den groben Inhalt des Hardwarekataloges und weiss, wie ich diesen\
+    \ in meinem Projekt einsetzen kann."
   is_correct: true
-- text: Ich weiss, wo ich im Hardwarekatalog Hilfe zur elektrischen Montage der Bauteile bekomme.
+- text: "Ich weiss, wo ich im Hardwarekatalog Hilfe zur elektrischen Montage der Bauteile\
+    \ bekomme."
   is_correct: true
-- text: Ich kenne die Funktionen von SimpleLED und SimpleButton und kann diese in einer einfache Applikation verwenden.
+- text: Ich kenne die Funktionen von SimpleLED und SimpleButton und kann diese in
+    einer einfache Applikation verwenden.
   is_correct: true
 - text: Ich kann eine einfache Applikation auf dem Raspberry Pi starten.
   is_correct: true
 files:
-- name: src/Component.java
-  visible: false
-- name: src/ErsteKomponente-ImplementationButton.run.xml
-  visible: false
 - name: src/Main.java
   visible: true
-- name: src/PIN.java
-  visible: false
 - name: src/SimpleButton.java
   visible: true
 - name: src/SimpleLED.java
   visible: true
+- name: src/PIN.java
+  visible: true
+- name: src/ErsteKomponente-ImplementationButton.run.xml
+  visible: true
+- name: src/Component.java
+  visible: true
+local_check: true
