--- a/Tutorial/Erste Komponente/Zusammenfassung/task-info.yaml
+++ b/Tutorial/Erste Komponente/Zusammenfassung/task-info.yaml
@@ -2,13 +2,13 @@ type: theory
 files:
 - name: src/Main.java
   visible: true
-- name: src/Component.java
-  visible: false
-- name: src/PIN.java
-  visible: false
 - name: src/SimpleButton.java
   visible: true
-- name: src/ErsteKomponente-ImplementationButton.run.xml
-  visible: false
 - name: src/SimpleLED.java
+  visible: true
+- name: src/PIN.java
+  visible: true
+- name: src/ErsteKomponente-ImplementationButton.run.xml
+  visible: true
+- name: src/Component.java
   visible: true
