corrected MVC, now with more hints

--- a/Tutorial/ModelViewController/Kontroller/task-info.yaml
+++ b/Tutorial/ModelViewController/Kontroller/task-info.yaml
@@ -8,16 +8,21 @@ files:
   - offset: 446
     length: 27
     placeholder_text: /* TODO declare the SimpleLed. */
-  - offset: 726
+  - offset: 766
     length: 40
     placeholder_text: /* TODO initialize the SimpleLed */
-  - offset: 1134
+  - offset: 1193
     length: 32
     placeholder_text: /* TODO register on the event "onUp" from the button the function
       "ledOff" of the controller */
-  - offset: 1602
+  - offset: 1661
     length: 85
-    placeholder_text: /* TODO create a listener on the "ledGlows" of the model, and toggle the led */
+    placeholder_text: "/* TODO create a listener on the \"ledGlows\" of the model,\
+      \ and toggle the led */"
+  - offset: 922
+    length: 42
+    placeholder_text: /* TODO deregister the functions and shutdown the components.
+      Don't forget to turn off the LED */
 - name: src/view/components/helpers/PIN.java
   visible: false
 - name: src/view/components/Component.java
@@ -31,10 +36,10 @@ files:
 - name: src/controller/Controller.java
   visible: true
   placeholders:
-  - offset: 497
+  - offset: 529
     length: 31
     placeholder_text: /* TODO refresh the model to turn on the led */
-  - offset: 824
+  - offset: 888
     length: 32
     placeholder_text: /* TODO refresh the model to turn off the led */
 - name: src/util/mvcbase/ConcurrentTaskQueue.java
