--- a/Tutorial/ModelViewController/Model/task-info.yaml
+++ b/Tutorial/ModelViewController/Model/task-info.yaml
@@ -18,22 +18,24 @@ files:
   - offset: 445
     length: 30
     placeholder_text: /* TODO declare the LedButton */
-  - offset: 671
+  - offset: 698
     length: 59
     placeholder_text: /* TODO initialize the LedButton */
-  - offset: 846
-    length: 29
+  - offset: 873
+    length: 57
     placeholder_text: /* TODO implement the Shutdown */
-  - offset: 1056
+  - offset: 1111
     length: 92
-    placeholder_text: /* TODO connect the interactions from the button with the function of the controller
-      */
-  - offset: 1322
+    placeholder_text: /* TODO connect the interactions from the button with the function
+      of the controller */
+  - offset: 1377
     length: 88
-    placeholder_text: /* TODO give out the message stored in the model to the console, when the message changes */
-  - offset: 1420
+    placeholder_text: "/* TODO give out the message stored in the model to the console,\
+      \ when the message changes */"
+  - offset: 1475
     length: 94
-    placeholder_text: /* TODO create a listener on the "ledGlows" of the model, and toggle the led */
+    placeholder_text: "/* TODO create a listener on the \"ledGlows\" of the model,\
+      \ and toggle the led */"
 - name: src/view/components/helpers/PIN.java
   visible: false
 - name: src/view/components/Component.java
@@ -49,7 +51,8 @@ files:
   placeholders:
   - offset: 241
     length: 105
-    placeholder_text: /* TODO create an Observable of type String with the name "message" */
+    placeholder_text: /* TODO create an Observable of type String with the name "message"
+      */
 - name: src/controller/Controller.java
   visible: true
   placeholders:
